--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,16 +5,17 @@
 	html {
 		display: flex;
 		justify-content: center;
-		height: 100%;
+		min-height: 100%;
 	}
 
 	body {
 		background-color: var(--light-gray);
-		margin: 0;
 		padding: 0;
+		margin: 15px;
 		width: 100%;
 		min-height: 100%;
 		max-width: 1200px;
+		overflow-y: auto;
 
 		.global-layout {
 			display: flex;
@@ -48,7 +49,7 @@
 		}
 
 		.yellow {
-			color: goldenrod;
+			color: darkgoldenrod;
 		}
 
 		.green {
@@ -110,26 +111,11 @@
 	}
 
 	.body-container {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		padding: 25px 65px 0 40px;
-		max-width: 800px;
-		transition: padding 0.2s;
-
-		@media (max-width: 800px) {
-			padding: 25px 20px 0 20px;
-		}
-
-		@media (max-width: 450px) {
-			padding: 50px 20px 0 20px;
-		}
-
 		h2 {
 			margin: 0 0 10px 0;
 			font-size: 70px;
 
-			@media (max-width: 800px) {
+			@media (max-width: 450px) {
 				font-size: 46px;
 			}
 		}
@@ -141,8 +127,8 @@
 
 			transition: font-size 0.2s;
 
-			@media (max-width: 800px) {
-				font-size: 16px;
+			@media (max-width: 450px) {
+				font-size: 18px;
 				line-height: 20px;
 			}
 		}
