--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -114,6 +114,7 @@
 		h2 {
 			margin: 0 0 10px 0;
 			font-size: 70px;
+			transition: font-size 0.2s;
 
 			@media (max-width: 450px) {
 				font-size: 46px;
